--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 pyrogram==2.0.106
-aiohttp==3.8.5
-beautifulsoup4
-urllib3==1.26.16
-brotli==1.0.9
+tgcrypto==1.2.5
+aiohttp==3.8.4
+beautifulsoup4==4.12.2
+python-dotenv==1.0.0
 google==3.0.0
+brotli==1.0.9
+
+
 
 
