--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 pyrogram==2.0.106
-tgcrypto==1.2.5
-aiohttp==3.10.0
+aiohttp==3.8.5
 beautifulsoup4==4.12.2
-python-dotenv==1.0.0
 google==3.0.0
-brotli==1.0.9
+cloudscraper==1.2.71
+urllib3==2.0.7
 
 
 
